--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,12 @@
     display: inline;
     font-weight: bold
 }
+
+.forecast-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 0 20px;
+}
