--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.container-max-width {
+    max-width: 1400px;
+}
+
 .daily-title {
     display: inline;
     font-weight: bold
@@ -5,23 +9,102 @@
 
 .forecast-cards {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex-wrap: nowrap; /* prevents items from wrapping onto new rows */
+    justify-content: space-between;
     margin: 0 auto;
     max-width: 1200px;
-    padding: 0 20px;
+    overflow-x: auto; /* adds horizontal scrolling for smaller screens */
+    padding: 0 10px;
+    background-color: #f8f9fa; /* add a gray background color */
+}
+
+.card {
+    flex-basis: 20%;
+    margin-bottom: 20px;
+    background-color: #fff; /* add a white background color to the cards */
+    border: 1px solid #dee2e6; /* add a border to the cards */
+    border-radius: 5px; /* round the corners of the cards */
+    box-shadow: 0 2px 4px rgba(0,0,0,.1); /* add a subtle box-shadow to the cards */
+    overflow: hidden; /* hide any overflowing content */
 }
 
 .card-title {
-    font-size: 1 rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin: 0;
-    padding: 0;
+    margin: 10px 0;
 }
 
+.card-body {
+    padding: 10px;
+}
+
+.card + .card {
+    margin-left: 10px; /* add spacing between the cards */
+}
+
+.card-body > div {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.card-body > div > img {
+    height: 50px;
+    width: 50px;
+}
+
+
 .card-text {
-    font-size: 1 rem;
+    font-size: 0.9rem;
     margin: 0;
     padding: 10px 0;
-    /* text-align: center; */
 }
+
+.card-text span {
+    font-weight: bold;
+}
+
+.card-text span::after {
+    content: "";
+    display: inline-block;
+    width: 60px;
+}
+
+aside {
+    padding-bottom: 20px;
+}
+
+h2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+input[type="text"] {
+    border: none;
+    border-bottom: 1px solid #ced4da;
+}
+
+.search-button {
+    background-color: #007bff;
+    border: none;
+    color: #fff;
+}
+
+.search-button:hover {
+    background-color: #0069d9;
+}
+
+#history {
+    background-color: #f8f9fa;
+    padding: 10px;
+}
+
+#forecast > h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+}
+ 
+
+
